--- a/styles/scss/components/_auth.scss
+++ b/styles/scss/components/_auth.scss
@@ -15,7 +15,6 @@
     background-color: #ffffff;
     animation: hide 2s forwards;
     z-index: -1;
-    transition: ease-in-out 0.5s;
 }
 
 
